@@ -18,7 +18,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: easy.c,v 1.114 2008-03-11 07:37:40 mmarek Exp $
+ * $Id: easy.c,v 1.115 2008-03-18 08:14:37 mmarek Exp $
  ***************************************************************************/
 
 #include "setup.h"
@@ -548,6 +548,7 @@ void Curl_easy_initHandleData(struct SessionHandle *data)
  * curl_easy_getinfo() is an external interface that allows an app to retrieve
  * information from a performed transfer and similar.
  */
+#undef curl_easy_getinfo
 CURLcode curl_easy_getinfo(CURL *curl, CURLINFO info, ...)
 {
   va_list arg;
